--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Pdx Love Calculator</title>
 </head>
 
-<body style="background-image: url('love1.jpg') ;  " >
+<body style="background-image: url('https://picsum.photos/1366/768/?blur') ;  " >
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light "  style="background-color: #E60023;" >
